--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Mentions légales — HYDRAUPRO</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style2.css">
+  <link rel="stylesheet" href="style.css">
   <script defer src="main.js"></script>
 </head>
 <body>
