--- a/assainissement.html
+++ b/assainissement.html
@@ -49,7 +49,13 @@
 
   <main>
     <section class="white-card-section">
-      <h1>ÉTUDE D'ASSAINISSEMENT </h1>
+
+    <p>L’Assainissement autonome correspond à tout système d’assainissement effectuant la collecte, le prétraitement, l’épuration, l’infiltration ou le rejet des eaux usées domestiques des habitations non raccordées au réseau public d’assainissement.</p>
+     <p>Un système d’assainissement autonome bien conçu, correctement installé et régulièrement entretenu, c’est la garantie d’une meilleure protection de l’environnement, de la salubrité publique et de votre qualité de vie</p>
+     <p>Nous vous accompagnons dans la planification, la conception, la construction, l'exploitation et la maintenance de vos ouvrages d’assainissement autonome, en respectant scrupuleusement les normes en vigueur Sénégalaise. Nous proposons des solutions clé en main, adaptées à vos besoins spécifiques et à vos projets, qu’il s’agisse de maisons d'habitation, de commerces ou d’installations collectives.</p>
+    
+    
+    <h1>ÉTUDE D'ASSAINISSEMENT </h1>
       <p>L'étude d'assainissement non collectif (ANC) des eaux usées est nécessaire lorsque le « tout à l'égout » ne dessert pas la parcelle du projet :</p>
       <ul class="list-bullets">
         <li>pour l'instruction du permis de construire d'une construction neuve,</li>
