--- a/distribution.html
+++ b/distribution.html
@@ -47,7 +47,7 @@
     </header>
 
       <!-- HERO pleine largeur -->
-    <section class="page-hero" style="--hero-image: url('images/Surpresseur.jpg')">
+    <section class="page-hero" style="--hero-image: url('images/Distribution eau potable.jpg')">
   <div class="page-hero__bg"></div>
   <div class="page-hero__inner">
     <h1>Distribution d’eau potable</h1>
@@ -95,7 +95,7 @@
                 </ul>
         </div>
         <div class="image-side">
-          <img src="images/Surpresseur.jpg" alt="Schéma détaillé d'un système de distribution d'eau potable" />
+          <img src="images/Distribution eau potable.jpg" alt="Schéma détaillé d'un système de distribution d'eau potable" />
         </div>
       </div>
     </section>
