--- a/irrigation.html
+++ b/irrigation.html
@@ -47,7 +47,7 @@
 
       <!-- HERO pleine largeur -->
       <!-- HERO pleine largeur -->
-    <section class="page-hero" style="--hero-image: url('images/Surpresseur.jpg')">
+    <section class="page-hero" style="--hero-image: url('images/schema d\'irrigation.jpg')">
   <div class="page-hero__bg"></div>
   <div class="page-hero__inner">
     <h1>Irrigation</h1>
